<resources>
    <string name="app_name">bookingtime app</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Usuario</string>
    <string name="prompt_password" translatable="false">Contraseña</string>
    <string name="action_sign_in" translatable="false">Iniciar Sesión</string>
    <string name="action_sign_in_short" translatable="false">Registrarse</string>
    <string name="invalid_username" translatable="false">Nombre de Usuario invalido</string>
    <string name="invalid_password" translatable="false">La contraseña tiene que tener mas de 8 caracteres</string>
    <string name="login_failed" translatable="false">"Login fallido"</string>
    <string name="todo">TODO</string>
    <string name="welcome">Bienvenido</string>
    <string name="imagen" translatable="false">imagen</string>
    <string name="icono" translatable="false">icono</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro de Usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="bookingtime">bookingtime</string>
    <string name="numero_de_celular">Numero de celular</string>
    <string name="btn_ver_reservas">Ver reservas</string>
    <string name="btn_reservar">Reservar</string>
    <string name="btn_ver_menu">Ver menú</string>
    <string name="restaurant_title">Nombre del restaurante</string>
    <string name="text_description">Información del restaurante</string>
    <string name="btn_atras">Atrás</string>
    <string name="text_reservas">Reservas</string>
    <string name="text_menu">Menú</string>
</resources>
